add empty refactor stuff

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -11,11 +11,28 @@
   <script type="text/javascript" src="src/stack.js"></script>
   <script type="text/javascript" src="src/queue.js"></script>
 
+  <!-- refactored source files -->
+  <!-- (these start off empty; ignore until you're done with the above) -->
+  <script type="text/javascript" src="src/stack-refactors/step2.js"></script>
+  <script type="text/javascript" src="src/stack-refactors/step3.js"></script>
+  <script type="text/javascript" src="src/stack-refactors/step4.js"></script>
+  <script type="text/javascript" src="src/queue-refactors/step2.js"></script>
+  <script type="text/javascript" src="src/queue-refactors/step3.js"></script>
+  <script type="text/javascript" src="src/queue-refactors/step4.js"></script>
+
   <!-- spec files -->
   <!-- (you can comment out any you're not working on) -->
   <script type="text/javascript" src="spec/stackSpec.js"></script>
   <script type="text/javascript" src="spec/queueSpec.js"></script>
 
+  <!-- refactored spec files -->
+  <!-- (these start off empty; ignore until you're done with the above) -->
+  <script type="text/javascript" src="spec/stack-refactors/step2.js"></script>
+  <script type="text/javascript" src="spec/stack-refactors/step3.js"></script>
+  <script type="text/javascript" src="spec/stack-refactors/step4.js"></script>
+  <script type="text/javascript" src="spec/queue-refactors/step2.js"></script>
+  <script type="text/javascript" src="spec/queue-refactors/step3.js"></script>
+  <script type="text/javascript" src="spec/queue-refactors/step4.js"></script>
 </head>
 <body>
 
