--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -22,13 +22,11 @@
 		};
 
 		runner.scripts = [
-			'queue.js',
 			'stack.js'
 		];
 
 		runner.specs = [
-			'spec/stackSpec.js',
-			'spec/queueSpec.js'
+			'spec/stackSpec.js'
 		];
 	</script>
 </head>
